# OmniNarrative

./: .env.example  .gitignore  README.md  alembic.ini
backend/: .env.example  README.md  claude.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  enums.py
backend/app/data/: platform_trend_templates.json
backend/app/db/: bootstrap.py  session.py
backend/app/schemas/: creation_request.py  generation.py  narrative_generation.py  profiles.py  (+4 more)
backend/migrations/: README  env.py
backend/tests/: conftest.py  test_m26_trend_repository_bootstrap.py  test_m27_trend_collection.py  test_m28_model_gateway.py  test_m29_model_first_narrative.py  test_m30_generation_store_persistence.py  test_m31_backend_regression_closure.py  test_m32_bootstrap_resilience.py  test_m33_alembic_cli_roundtrip.py  test_m34_generation_diagnostics.py  test_m35_generation_orchestrator.py  test_m36_generation_execution_runner.py  test_m38_instructor_profile_parser.py  test_m41_internal_trend_api.py  test_m46_export_payload_compat.py  test_m46_instructor_package_assembler.py  test_m48_structured_output_gateway.py  test_m50_langgraph_checkpoint_persistence.py  test_m51_generation_checkpoint_restore.py  test_m52_generation_checkpoint_state_snapshot.py  test_m53_checkpoint_aware_result_builder.py  test_m58_rsshub_trend_ingestion.py  test_m5_trend_and_exports.py  test_m69_trend_template_summary_fields.py  test_m70_generation_concurrency_and_fault_injection.py  test_m71_localhost_cors.py  test_m97_aihubmix_native_plus_summary_refresh.py
(+284 files in other folders)
