[project]
name = "multi-media-backend"
version = "0.1.0"
description = "FastAPI backend for the multi-media narrative workspace"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.5,<0.116.0",
  "uvicorn[standard]>=0.32.1,<0.33.0",
  "pydantic>=2.9.2,<3.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "httpx>=0.27.2,<0.28.0",
  "litellm>=1.52.8,<2.0.0",
  "instructor[litellm]>=1.14.5,<2.0.0",
  "langgraph>=1.1.3,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "ruff>=0.7.4,<0.8.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
